--- a/CHANGES
+++ b/CHANGES
@@ -2,3 +2,6 @@
 1.1.0		Extracted styling into mconsole.Style and improved API
 1.1.1		Fixed compile time error when using console inside macros in NME, 
 			see: https://github.com/haxenme/NME/issues/21
+1.2.0		Added optional stack argument to Console.error to allow specifying
+			haxe.Stack.exceptionStack instead of haxe.Stack.callStack, or 
+			empty for no stack trace at all.
