Squashed commit of the following:
commit 7886da3266d5cede2950b211b46eb93cacec2ad7
Merge: 1ad1b9d 383ee96
Author: David Peek <david.peek@massiveinteractive.com>
Date:   Mon Mar 4 11:27:53 2013 +1100

    Merged master

commit 1ad1b9db6f2285094c9a3d116878f0d75567adf4
Author: Dominic De Lorenzo <dom@misprintt.net>
Date:   Mon Feb 18 21:15:18 2013 +1100

    migrated to haxe3, tests compiling without coverage

--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,11 @@
-1.0.0		Initial release
-1.1.0		Extracted styling into mconsole.Style and improved API
-1.1.1		Fixed compile time error when using console inside macros in NME, 
-			see: https://github.com/haxenme/NME/issues/21
+
+2.0.0		Added support for Haxe 3 RC
+1.2.2		Added support for Haxe 2.11 change from Stack to CallStack 
+1.2.1		Minor fixes to indentation of log output.
 1.2.0		Added optional stack argument to Console.error to allow specifying
 			haxe.Stack.exceptionStack instead of haxe.Stack.callStack, or 
 			empty for no stack trace at all.
-1.2.1		Minor fixes to indentation of log output.
-1.2.2		Added support for Haxe 2.11
+1.1.1		Fixed compile time error when using console inside macros in NME, 
+			see: https://github.com/haxenme/NME/issues/21
+1.1.0		Extracted styling into mconsole.Style and improved API
+1.0.0		Initial release
